--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
     rel="stylesheet"
   />
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="src/index.css" /> -->
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-teal-300 h-full min-h-screen">
+    <div class="h-full min-h-screen" id="root"></div>
   </body>
 </html>
