Add empty trash feature, character count on Create Area. Minor style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <title>Post it App</title>
-    <link
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet"
-  />
-    <!-- <link rel="stylesheet" href="src/index.css" /> -->
+    <link rel="icon" href="./favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet" />
   </head>
-  <body class="bg-teal-300 h-full min-h-screen">
-    <div class="h-full min-h-screen" id="root"></div>
+  <body>
+    <div id="root"></div>
   </body>
 </html>
